--- a/LuceneSearch/LuceneSearch/MainWindow.xaml
+++ b/LuceneSearch/LuceneSearch/MainWindow.xaml
@@ -101,7 +101,21 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <GroupBox Header="Configuration" Grid.Row="0" Margin="5" Padding="5">
+                    <GroupBox Header="Search Settings" Grid.Row="0" Margin="5" Padding="5">
+                        <ScrollViewer>
+                            <StackPanel>
+                                <ListBox ItemsSource="{Binding SearchFilterCollection}" SelectedItem="{Binding SelectedSearchFilter}" MaxHeight="150" Margin="5">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name}"/>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </StackPanel>
+                        </ScrollViewer>
+                    </GroupBox>
+
+                    <GroupBox Header="Index Settings" Grid.Row="1" Margin="5" Padding="5">
                         <ScrollViewer>
                             <StackPanel>
                                 <ListView ItemsSource="{Binding ConfigSettings}" MinHeight="150" Margin="5">
@@ -126,31 +140,7 @@
                         </ScrollViewer>
                     </GroupBox>
 
-                    <GroupBox Header="Search Settings" Grid.Row="1" Margin="5" Padding="5">
-                        <ScrollViewer>
-                            <StackPanel>
-                                <ListView ItemsSource="{Binding SearchFilterCollection}" MaxHeight="150" Margin="5">
-                                    <ListView.View>
-                                        <GridView>
-                                            <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"></GridViewColumn>
-
-                                            <GridViewColumn Header="Apply" Width="140">
-                                                <GridViewColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <RadioButton GroupName="a" IsChecked="{Binding IsChecked, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                                                              Width="120" HorizontalAlignment="Center"/>
-                                                    </DataTemplate>
-                                                </GridViewColumn.CellTemplate>
-                                            </GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-                                <Button Margin="5" 
-                                    Content="Apply" Width="80" HorizontalAlignment="Right"
-                                    Command="{Binding ElementName=yuriWin,Path=DataContext.ApplySearchSettingsCommand}"/>
-                            </StackPanel>
-                        </ScrollViewer>
-                    </GroupBox>
+                    
                 </Grid>
             </ScrollViewer>
         </Expander>
